# Rust

./: .gitignore  Cargo.toml  README.md
b64/: Cargo.toml
b64/src/: main.rs  test.rs
cnum/: Cargo.toml
cnum/src/: main.rs
crc16/: Cargo.toml
crc16/src/: main.rs
cutr/: Cargo.toml
cutr/src/: app.rs  field_spec.rs  main.rs  utilities.rs
general/: Cargo.toml
general/src/: lib.rs
kennard-stone/: Cargo.toml
kennard-stone/src/: main.rs
mp4tag/: Cargo.toml
mp4tag/src/: argparse.rs  main.rs
mt19937/: Cargo.toml
mt19937/src/: main.rs
mtag/: Cargo.toml
mtag/src/: argparse.rs  audio_info.rs  main.rs  tagger.rs
nom_word_boundary/: Cargo.toml
nom_word_boundary/src/: lib.rs  main.rs
num/: Cargo.toml
num/src/: main.rs
plot/: Cargo.toml
plot/src/: main.rs
qr-otpauth/: Cargo.toml
qr-otpauth/src/: main.rs  totp_token.rs
qr-otpauth/src/google_authenticator_converter/: mod.rs
qr-otpauth/src/totp_token/: mod.rs
sha/: Cargo.toml
sha/src/: main.rs
tok/: Cargo.toml
tok/src/: argparse.rs  main.rs
tokenize/: Cargo.toml
tokenize/src/: error.rs  lib.rs  regexboundary.rs  splitstr.rs  tokenization_spec.rs  tokenizer.rs  wordboundary.rs
utf8char/: Cargo.toml
utf8char/src/: main.rs
uuid/: Cargo.toml
uuid/src/: main.rs
uuids/: Cargo.toml
uuids/src/: main.rs
