[workspace]

members = [
    # binaries
    "b64",
    "crc16",
    "cutr",
    "kennard-stone",
    "mp4tag",
    "nom_word_boundary",
    "num",
    "cnum",
    "sha",
    "tok",
    "utf8char",
    "uuids",

    # libraries
    "general",
    "tokenize",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.3.8", features = ["cargo", "derive"] }
colored = "2"
general = { path = "general" }
itertools = "0.10"
lazy_static = "1.4"
rand = "0.8.5"
regex = "1.9"
tokenize = { path = "tokenize" }
