[workspace]
resolver = "2"

members = [
    # binaries
    "b64",
    "crc16",
    "cutr",
    "kennard-stone",
    "mp4tag",
    "nom_word_boundary",
    "num",
    "cnum",
    "sha",
    "tok",
    "utf8char",
    "uuids",

    # libraries
    "general",
    "tokenize",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
colored = "2"
general = { path = "general" }
itertools = "0.11"
lazy_static = "1.4"
rand = "0.8.5"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha1 = "0.10.6"
sha2 = "0.10.8"
tokenize = { path = "tokenize" }
