[workspace]
resolver = "2"

members = [
    # binaries
    "b64",
    "cnum",
    "crc16",
    "cutr",
    "kennard-stone",
    "mp4tag",
    "mt19937",
    "nom_word_boundary",
    "num",
    "sha",
    "tok",
    "tokenize",
    "utf8char",
    "uuids",

    # libraries
    "general",
]

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo", "derive"] }
colored = "2"
general = { path = "general" }
itertools = "0.13"
lazy_static = "1.5"
rand = "0.8.5"
regex = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
sha1 = "0.10.6"
sha2 = "0.10.8"
tokenize = { path = "tokenize" }
