[package]
description = "Base64 Encoder/Decoder"
name = "b64"
version = "1.0.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.2.7", features = ["derive"] }
general = { path = "../general" }
