[package]
description = "Character Number/UTF Representation Converter"
name = "cnum"
version = "1.0.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = "2"
general = { workspace = true }
