[package]
description = "CRC-16: x^16 + x^15 + x^2 + 1"
name = "crc16"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.3", features = ["derive"] }
crc = "3.0"
