[package]
description = "Extract selected fields of each line of a file by index, range, or regular expression"
name = "cutr"
version = "1.0.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.25"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
general = { path = "../general" }
tokenize = { path = "../tokenize" }
itertools = "0.10"
#libc = "0.2.137"
regex = "1.7"
