[package]
description = "Extract selected fields of each line of a file by index, range, or regular expression"
name = "cutr"
version = "1.0.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
general = { workspace = true }
itertools = "0.10"
regex = { workspace = true }
tokenize = { workspace = true }
