[package]
description = "Utility to overwrite/clear tags in an .m4a file"
name = "mp4tag"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["cargo"] }
mp4ameta = "0.11.0"
general = { path = "../general" }
anyhow = "1.0.71"
