[package]
description = "Utility to overwrite/clear tags in .m4a files"
name = "mp4tag"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
mp4ameta = "0.11.0"
general = { path = "../general" }
