[package]
description = "Experimenting with the nom parser combinator"
name = "nom_word_boundary"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { workspace = true }
nom = "7.1"
regex = { workspace = true }
