[package]
description = "Number/UTF Representation Converter"
name = "num"
version = "1.0.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12"
anyhow = "1.0"
clap = { version = "3.2.6", features = ["derive"] }
