[package]
description = "Display the optauth URI and TOTP token from a QR image, URI or migration link"
name = "qr-otpauth"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base32 = "0.4"
base64 = "0.21"
clap = { workspace = true }
general = { workspace = true }
hmac = "0.12.1"
image = "0.24"
protobuf = { version = "2.28.0" }
rqrr = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
urlencoding = "2"
