[package]
description = "Display the optauth URI and TOTP token from a QR image, URI or migration link"
name = "qr-otpauth"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
base32 = "0.4"
clap = { workspace = true }
google_authenticator_converter = "0.2.0"
hmac = "0.12"
image = "0.24"
rqrr = "0.6"
sha1 = { workspace = true }
sha2 = { workspace = true }
urlencoding = "2"
