[package]
description = "SHA 1,256"
name = "sha"
version = "1.0.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
general = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
