[package]
name = "tokenize"
version = "0.1.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_delegate = "0.2"
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
unicode-segmentation = "1.10"
