[package]
description = "UUID v4,v5"
name = "uuid"
version = "1.0.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
general = { path = "../general" }
uuid = { version = "1.2", features = ["v4", "v5"] }
