[package]
description = "UUID v4,v5"
name = "uuids"
version = "1.0.0"
authors = ["Dave Farnham <dave.farnham@icloud.com>"]
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
general = { workspace = true }
uuid = { version = "1.10", features = ["v4", "v5"] }
